--- a/elements.html
+++ b/elements.html
@@ -66,42 +66,69 @@
 											</header>
 											<ul class="features">
 												<li>
-													<div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+													<div class="headshot"><img src="images/placeholder.jpg" alt=""/></div>
 													<div class ="bio">
-													    <h3>EXAMPLE</h3>
-													    <p>Team X<br />
-													    Stern Class of 2019<br />
-													    B.S. Finance & Data Science</p>
-													</div>
-												</li>
-												<li>
-												    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
-												    <div class="bio">
-															<h3>EXAMPLE</h3>
-													    <p>Team X<br />
-													    Stern Class of 2019<br />
-													    B.S. Finance & Data Science</p>
-													</div>
-												</li>
-												<li>
-												    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
-				                                    <div class="bio">
-																							<h3>EXAMPLE</h3>
-																					    <p>Team X<br />
+													    <h3>Christine Gal</h3>
+													    <p>Political Team<br />
 													    Stern Class of 2018<br />
-													    B.S.</p>
+													    Member Since Spring 2017</p>
 													</div>
 												</li>
 												<li>
-												    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+												    <div class="headshot"><img src="images/placeholder.jpg" alt=""/></div>
+												    <div class="bio">
+														<h3>Colin Hong</h3>
+													    <p>Sports Team<br />
+													    Stern Class of 2018<br />
+													    Member Since Spring 2017</p>
+													</div>
+												</li>
+												<li>
+												    <div class="headshot"><img src="images/placeholder.jpg" alt=""/></div>
 				                                    <div class="bio">
-																							<h3>EXAMPLE</h3>
-																					    <p>Team X<br />
+														<h3>Edward Hu</h3>
+														<p>Sports Team<br />
 													    Stern Class of 2019<br />
-													    B.S.</p>
+													    Member Since Spring 2017</p>
 													</div>
 												</li>
 												<li>
+												    <div class="headshot"><img src="images/placeholder.jpg" alt=""/></div>
+				                                    <div class="bio">
+														<h3>Michelle Tu</h3>
+														<p>Financial Team<br />
+													    Stern Class of 2020<br />
+													    Member Since Spring 2017</p>
+													</div>
+												</li>
+												<li>
+												    <div class="headshot"><img src="images/placeholder.jpg" alt=""/></div>
+												    <div class="bio">
+														<h3>Tommy Guo</h3>
+													    <p>Political Team<br />
+													    Stern Class of 2018<br />
+													    Member Since Spring 2017</p>
+													</div>
+												</li>
+												<li>
+												    <div class="headshot"><img src="images/placeholder.jpg" alt=""/></div>
+												    <div class="bio">
+														<h3>Steven Lin</h3>
+													    <p>Political Team<br />
+													    Stern Class of 2018<br />
+													    Member Since Spring 2017</p>
+													</div>
+												</li>
+												<li>
+												    <div class="headshot"><img src="images/placeholder.jpg" alt=""/></div>
+												    <div class="bio">
+														<h3>Steven Wong</h3>
+													    <p>Financial Team<br />
+													    Stern Class of 2018<br />
+													    Member Since 2017</p>
+													</div>
+												</li>
+												<!-- <li>
 												    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
 												    <div class="bio">
 															<h3>EXAMPLE</h3>
@@ -109,34 +136,7 @@
 													    Stern Class of 2020<br />
 													    B.S.</p>
 													</div>
-												</li>
-												<li>
-												    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
-												    <div class="bio">
-															<h3>EXAMPLE</h3>
-													    <p>Team X<br />
-													    Stern Class of 2020<br />
-													    B.S.</p>
-													</div>
-												</li>
-												<li>
-												    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
-												    <div class="bio">
-															<h3>EXAMPLE</h3>
-													    <p>Team X<br />
-													    Stern Class of 2019<br />
-													    B.S.</p>
-													</div>
-												</li>
-												<li>
-												    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
-												    <div class="bio">
-															<h3>EXAMPLE</h3>
-													    <p>Team X<br />
-													    Stern Class of 2020<br />
-													    B.S.</p>
-													</div>
-												</li>
+												</li> -->
 											</ul>
 									</section>
 									<section class = "wrapper style8 special">
@@ -151,14 +151,14 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
 							<li><a href="https://www.facebook.com/SternBAC/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
+							<!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Business Analytics Club </li>
+						<!-- </ul>
+						<ul class="copyright"> -->
+							<li class="copyright">&copy; Business Analytics Club </li>
 						</ul>
 					</footer>
 
