--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 									</div>
 								</li>
 								<li>
-								    <div class="headshot"><img src="images/nick.jpg" alt=""/></div>
+								    <div class="headshot"><img src="images/jill.jpg" alt=""/></div>
 								    <div class="bio">
 									    <h3>Jill Xu</h3>
 									    <p>Co-Vice President<br />
@@ -126,7 +126,7 @@
 									</div>
 								</li>
 								<li>
-								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+								    <div class="headshot"><img src="images/sijia.jpg" alt=""/></div>
                                     <div class="bio">
 									    <h3>Sijia Zhou</h3>
 									    <p>Treasurer<br />
@@ -135,12 +135,12 @@
 									</div>
 								</li>
 								<li>
-								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+								    <div class="headshot"><img src="images/nisarg.jpg" alt=""/></div>
 								    <div class="bio">
 									    <h3>Nisarg Patel</h3>
 									    <p>Director of BaChallenge<br />
 									    Stern Class of 2020<br />
-									    B.S.</p>
+									    B.S. Finance & Data Science</p>
 									</div>
 								</li>
 								<!-- <li>
@@ -153,20 +153,20 @@
 									</div>
 								</li> -->
 								<li>
-								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+								    <div class="headshot"><img src="images/kevin.jpg" alt=""/></div>
 								    <div class="bio">
 									    <h3>Kevin Wong</h3>
 									    <p>Director of Marketing (Fall)<br />
 									    Stern Class of 2019<br />
-									    B.S.</p>
+									    B.S. Finance & Operations</p>
 									</div>
 								</li>
 								<li>
-								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+								    <div class="headshot"><img src="images/shruti.jpg" alt=""/></div>
 								    <div class="bio">
 									    <h3>Shruti Manglik</h3>
 									    <p>Direcotr of Operations<br />
-									    Stern Class of 2020<br />
+									    NYU CAS Class of 2020<br />
 									    B.S.</p>
 									</div>
 								</li>
@@ -200,14 +200,14 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
 							<li><a href="https://www.facebook.com/SternBAC/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
+							<!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Business Analytics Club</li>
+						<!-- </ul>
+						<ul class="copyright"> -->
+							<li class="copyright">&copy; Business Analytics Club</li>
 						</ul>
 					</footer>
 
