--- a/elements.html
+++ b/elements.html
@@ -125,7 +125,7 @@
 														<h3>Steven Wong</h3>
 													    <p>Financial Team<br />
 													    Stern Class of 2018<br />
-													    Member Since 2017</p>
+													    Member Since Spring 2017</p>
 													</div>
 												</li>
 												<!-- <li>
