--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 									    <h3>Sijia Zhou</h3>
 									    <p>Treasurer<br />
 									    Stern Class of 2019<br />
-									    B.S.</p>
+									    B.S. Finance; Minor in Food Studies</p>
 									</div>
 								</li>
 								<li>
