--- a/calendar.html
+++ b/calendar.html
@@ -55,13 +55,13 @@
 							<ul id="club_events" class="dropdown-menu">
 							</ul>
 						</div-->
-						<section class="wrapper style5 float-top clearfix">
+						<section id="caltree" class="wrapper style5 float-top clearfix">
 							<div class="column">
 								<h4> <b> Navigate by semester: </b></h4>
 								<div id="fall-tree"></div>
 								<div id="spring-tree"></div>
 							</div>
-							<div class="inner column">
+							<div id= 'caltreeinner' class="inner column">
 						</section>
 					</article>
 
